--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=keeplo-platform
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/learning-center-os?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/collections?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=NaveAS*jamon02
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
