--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/collections?useSSL=false&serve
 spring.datasource.username=root
 spring.datasource.password=NaveAS*jamon02
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8085
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
