--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=keeplo-platform
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/keeplo-db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=soporte
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
@@ -16,3 +16,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.acme.keeplo.platform.shared.infrastructure.persistence.jpa.strategy.SnakeCasePhysicalNamingStrategy
+
+# Application Information for Documentation
+
+# Elements take their values from maven pom.xml build-related information
+documentation.application.description=@project.description@
+documentation.application.version=@project.version@
+
+# JWT Configuration Properties
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
