--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.application.name=keeplo-platform
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/collections?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/keeplo-db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=NaveAS*jamon02
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8085
+server.port=8080
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
