--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # Spring Application Name
-
 spring.application.name=keeplo-platform
 
+# Profile
+spring.profiles.active=prod
+
+
+
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/keeplo-db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
@@ -22,10 +23,6 @@ spring.jpa.hibernate.naming.physical-strategy=com.acme.keeplo.platform.shared.in
 # Elements take their values from maven pom.xml build-related information
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
-
-# JWT Configuration Properties
-authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
-authorization.jwt.expiration.days = 7
 
 # Flyway Configuration
 spring.flyway.enabled=false
