build: add jwt configuraiton env variables

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://mysql-keeplo-upc-dev.mysql.database.azure.com:3306/mysql-keeplo-upc-dev?useSSL=false&requireSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-keeplo-upc-dev.mysql.database.azure.com:3306/mysql-keeplo-upc-dev?useSSL=true&requireSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=dev
 spring.datasource.password=UPC2025!
