--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,9 @@ spring.jpa.hibernate.naming.physical-strategy=com.acme.keeplo.platform.shared.in
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
 
+authorization.jwt.secret=AbCdEfGhIjKlMnOpQrStUvWxYz1234567890
+authorization.jwt.expiration.days=7
+
+
 # Flyway Configuration
 spring.flyway.enabled=false
